Adicionado pagina para inserção e edição de produto
Adicionado rota para produto

--- a/client/src/app/views/login/login.component.html
+++ b/client/src/app/views/login/login.component.html
@@ -15,6 +15,11 @@
             <div>
                 <button type="submit" class="btn-danger-outline" name="action" (click)="login()">Login</button>
             </div>
+            <div>
+                <p>Username: 11234567890</p>
+                <p>Password: 09876543211</p>
+
+            </div>
             <div *ngIf="loginSuccessfull !=null  && !loginSuccessfull">
                 <p>User not found</p>
             </div>
