--- a/client/src/app/views/login/login.component.html
+++ b/client/src/app/views/login/login.component.html
@@ -5,12 +5,12 @@
             <div>
                 <label for="email">Username</label><br>
                 <input name="username" [(ngModel)]="user.Username" class="input" type="text"
-                    placeholder="Type your Username">
+                    placeholder="Type your Username" value="11234567890">
             </div>
             <div>
                 <label for="email">Password</label><br>
                 <input name="password" [(ngModel)]="user.Password" class="input" type="password"
-                    placeholder="Type your Password">
+                    placeholder="Type your Password" value="09876543211" required="required">
             </div>
             <div>
                 <button type="submit" class="btn-danger-outline" name="action" (click)="login()">Login</button>
@@ -18,7 +18,6 @@
             <div>
                 <p>Username: 11234567890</p>
                 <p>Password: 09876543211</p>
-
             </div>
             <div *ngIf="loginSuccessfull !=null  && !loginSuccessfull">
                 <p>User not found</p>
